After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756625 - segfault in captured_event_cb
segfault in captured_event_cb
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkScrolledWindow
3.18.x
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
: 756999 757973 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2015-10-15 10:50 UTC by Sebastien Bacher
Modified: 2015-11-12 17:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GdkDevice: Do not free construct-only properties data on dispose() (2.35 KB, patch)
2015-10-22 18:01 UTC, Carlos Garnacho
committed Details | Review

Description Sebastien Bacher 2015-10-15 10:50:20 UTC
Those reports seem to have started with gtk 3.16

Backtrace from nautilus with gtk 3.17.90

"#0  __strstr_sse2 (haystack_start=0x0, needle_start=0x7f68173d0853 "TrackPoint") at ../string/strstr.c:63
        haystack = 0x0
        needle = 0x7f68173d0853 "TrackPoint"
        needle_len = <optimized out>
        haystack_len = <optimized out>
        ok = true

Thread 2 (Thread 0x7f6801b5b700 (LWP 2904))

  • #0 poll
    at ../sysdeps/unix/syscall-template.S line 84
  • #1 g_main_context_poll
    at gmain.c line 4135
  • #2 g_main_context_iterate
    at gmain.c line 3835
  • #3 g_main_context_iteration
    at gmain.c line 3901
  • #4 glib_worker_main
    at gmain.c line 5672
  • #5 g_thread_proxy
    at gthread.c line 778
  • #6 start_thread
    at pthread_create.c line 334
  • #7 clone
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S line 109
"
Comment 2 Carlos Garnacho 2015-10-22 18:01:44 UTC
Created attachment 313887 [details] [review]
GdkDevice: Do not free construct-only properties data on dispose()

Those are not references to other objects, and the device will be mostly
useless if those can't be set again anyway.
Comment 3 Matthias Clasen 2015-10-22 18:03:45 UTC
Review of attachment 313887 [details] [review]:

Makes sense.
Comment 4 Milan Crha 2015-10-26 09:15:04 UTC
*** Bug 756999 has been marked as a duplicate of this bug. ***
Comment 5 Carlos Garnacho 2015-11-03 12:34:35 UTC
Attachment 313887 [details] pushed as 7d8a3a5 - GdkDevice: Do not free construct-only properties data on dispose()
Comment 6 Milan Crha 2015-11-12 17:56:51 UTC
*** Bug 757973 has been marked as a duplicate of this bug. ***